--- a/home.html
+++ b/home.html
@@ -15,12 +15,12 @@
         <div class="brand">
           <a href="#">Food Mart</a>
         </div>
-        <ul>
+        <ul id="navUl">
           <li><a href="#">Home</a></li>
           <li><a href="products.html">Products</a></li>
           <li><a href="about.html">About Us</a></li>
           <li><a href="contact.html">Contact</a></li>
-          <li><a href="login.html">Sign In</a></li>
+          <li id="loginDetail"><a  href="login.html">Sign In</a></li>
         </ul>
       </nav>
     </header>
@@ -82,6 +82,7 @@
         <div class="card"></div>
         <div class="card"></div> -->
       </div>
+      
     </main>
     <footer>
       <div class="footer-content">
