fix logo alignment

--- a/login.html
+++ b/login.html
@@ -55,7 +55,9 @@
         />
         <div class="checkbox">
           <div class="forgetbutton">
-            <button>ForgetPassword?</button>
+            <button>
+              <a href="forgetPassword.html">ForgetPassword?</a>
+            </button>
             <div></div>
           </div>
           <button class="signinbutton" onclick="signIn()" id="signIn">
