--- a/login.html
+++ b/login.html
@@ -74,14 +74,24 @@
         </div>
       </div>
     </div>
-    <footer>
+  <footer>
       <div class="footer-content">
-        <p>&copy; 2024 Food Mart Delivery App. All rights reserved.</p>
-        <ul class="socials">
-          <li><a href="#">Facebook</a></li>
-          <li><a href="#">Twitter</a></li>
-          <li><a href="#">Instagram</a></li>
-        </ul>
+        <p style="margin: 10px;">&copy; 2024 Food Mart Delivery App. All rights reserved.</p>
+        <div style="display: flex;align-items: center; justify-content: center; flex-direction: column;">
+          <div class="policy">
+            <ul>
+              <li><a href="privacyPolicy">Privacy Policy</a></li>
+              <li><a href="termsOfServices">Terms of Services</a></li>
+              <li><a href="careers">Careers</a></li>
+              <li><a href="blog">Blog</a></li>
+            </ul>
+          </div>
+          <ul class="socials">
+            <li><a href="#">Facebook</a></li>
+            <li><a href="#">Twitter</a></li>
+            <li><a href="#">Instagram</a></li>
+          </ul>
+        </div>
       </div>
     </footer>
   </body>
