--- a/featurePages/changePassword.html
+++ b/featurePages/changePassword.html
@@ -71,12 +71,15 @@
           />
         </div>
         <div class="form-group">
-          <button type="submit">Submit</button>
+          <button type="submit" onclick="test()">Submit</button>
         </div>
       </form>
     </div>
 
     <script>
+      function test(){
+        window.location.href = "../login/login.html"
+      }
       document
         .getElementById("change-password-form")
         .addEventListener("submit", function (event) {
@@ -85,7 +88,7 @@
           const verifyUserToken = localStorage.getItem("verifyUserToken");
           console.log("New password:", newPassword);
 
-          fetch("http://localhost:3000/changePassword", {
+          fetch("http://localhost:3000/user/changePassword", {
             method: "POST",
             headers: {
               "Content-Type": "application/json",
