--- a/product/products.html
+++ b/product/products.html
@@ -17,7 +17,7 @@
           <a href="#">Food Mart</a>
         </div>
         <ul id="navUl">
-          <li><a href="home.html">Home</a></li>
+          <li><a href="../home.html">Home</a></li>
           <li><a href="#">Products</a></li>
           <li><a href="about.html">About Us</a></li>
           <li><a href="contact.html">Contact</a></li>
