--- a/home.html
+++ b/home.html
@@ -17,10 +17,10 @@
         </div>
         <ul id="navUl">
           <li><a href="#">Home</a></li>
-          <li><a href="products.html">Products</a></li>
+          <li><a href="./product/products.html">Products</a></li>
           <li><a href="about.html">About Us</a></li>
           <li><a href="contact.html">Contact</a></li>
-          <li id="loginDetail"><a  href="login.html">Sign In</a></li>
+          <li id="loginDetail"><a  href="./login/login.html">Sign In</a></li>
         </ul>
       </nav>
     </header>
@@ -30,6 +30,7 @@
           <h1 class="tagLine">Get your Favorite Food</h1>
           <p style="padding: 5px ; padding-left: 1.5em;margin:5px; font-size: 20px;">Hungry? We’ve got you covered! FoodieExpress brings your favorite meals from the best local restaurants right to your door. Whether you're craving pizza, sushi, or something sweet, our extensive menu has something for everyone.</p>
           <p class="offers">Get 10% off</p>
+         
         </div>
       </div>
 
