--- a/login/login.html
+++ b/login/login.html
@@ -18,11 +18,11 @@
           <a href="home.html">Food Mart</a>
         </div>
         <ul>
-          <li><a href="home.html">Home</a></li>
-          <li><a href="products.html">Products</a></li>
+          <li><a href="../home.html">Home</a></li>
+          <li><a href="../product/products.html">Products</a></li>
           <li><a href="about.html">About Us</a></li>
           <li><a href="contact.html">Contact</a></li>
-          <li><a href="login.html">Sign In</a></li>
+          <li><a href="#">Sign In</a></li>
 
         </ul>
       </nav>
