modify product page

--- a/product/products.html
+++ b/product/products.html
@@ -21,7 +21,7 @@
           <li><a href="#">Products</a></li>
           <li><a href="about.html">About Us</a></li>
           <li><a href="contact.html">Contact</a></li>
-          <li id="loginDetail"><a  href="login.html">Sign In</a></li>
+          <li id="loginDetail"><a  href="../login/login.html">Sign In</a></li>
         </ul>
       </nav>
    </header>
@@ -29,26 +29,6 @@
   
 
 </main>
- <footer>
-      <div class="footer-content">
-        <p>&copy; 2024 Food Mart Delivery App. All rights reserved.</p>
-        <div style="display: flex;align-items: center; justify-content: center; flex-direction: column;">
-          <div class="policy">
-            <ul>
-              <li><a href="privacyPolicy">Privacy Policy</a></li>
-              <li><a href="termsOfServices">Terms of Services</a></li>
-              <li><a href="careers">Careers</a></li>
-              <li><a href="blog">Blog</a></li>
-            </ul>
-          </div>
-          <ul class="socials">
-            <li><a href="#">Facebook</a></li>
-            <li><a href="#">Twitter</a></li>
-            <li><a href="#">Instagram</a></li>
-          </ul>
-        </div>
-      </div>
-    </footer>
-    
+
 </body>
 </html>
