add single product page

--- a/product/products.html
+++ b/product/products.html
@@ -1,18 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Food Mart</title>
-    <link rel="stylesheet" href="products.css">
+    <link rel="stylesheet" href="products.css" />
     <style>
       @import url("https://fonts.googleapis.com/css2?family=Pacifico&display=swap");
     </style>
     <script defer src="products.js"></script>
-</head>
-<body>
-   <header>
-     <nav>
+  </head>
+  <body>
+    <header>
+      <nav>
         <div class="brand">
           <a href="#">Food Mart</a>
         </div>
@@ -21,14 +21,17 @@
           <li><a href="#">Products</a></li>
           <li><a href="about.html">About Us</a></li>
           <li><a href="contact.html">Contact</a></li>
-          <li id="loginDetail"><a  href="../login/login.html">Sign In</a></li>
+          <li id="loginDetail"><a href="../login/login.html">Sign In</a></li>
         </ul>
       </nav>
-   </header>
-<main>
-  
+    </header>
+    <main>
+      <div class="itemDiv">
+        <h2 id="itemName" class="itemName">foood</h2>
+      </div>
+      <div id="cardDiv" class="cardDiv">
 
-</main>
-
-</body>
+      </div>
+    </main>
+  </body>
 </html>
