modify item page routes

--- a/item/item.html
+++ b/item/item.html
@@ -14,25 +14,26 @@
         <nav>
             <div class="brandName">Food Mart</div>
             <ul>
-                <li><a href="">Home</a></li>
-                <li><a href="">Product</a></li>
-                <li><a href="">Sign In</a></li>
+                <li><a href="../home.html">Home</a></li>
+                <li><a href="../product/products.html">Product</a></li>
+                <li><a href="../login/login.html">Sign In</a></li>
             </ul>
         </nav>
+
         <div class="productDiv">
             <div class="left">
                 <div id="imgDiv">
-                    <img src="/login-page/product/item/hamburger.jpg" width="400px">
+                    <img id="img" src="/login-page/product/item/hamburger.jpg" width="400px">
                 </div>
             </div>
             <div class="right">
-                <h2>Hamburger</h2>
-                <p>"A sandwich consisting of one or more cooked patties of ground meat, usually beef, placed inside a sliced bread roll or bun.</p>
+                <h2 id="itemName" class="itemName">Hamburger</h2>
+                <p id="itemDes" class="itemDes">"A sandwich consisting of one or more cooked patties of ground meat, usually beef, placed inside a sliced bread roll or bun.</p>
                 <div class="itemValues">
-                    <h3>$ 4.50</h3>
-                    <p class="cal">550 Cal </p>
+                    <h3 id="price">$ 4.50</h3>
+                    <p id="cal" class="cal">550 Cal </p>
                 </div>
-                <button class="orderBtn">Order Now</button>
+                <button class="orderBtn" class="orderBtn">Order Now</button>
                 <p></p>
             </div>
         </div>
