modify admin page

--- a/admin/admin.html
+++ b/admin/admin.html
@@ -32,9 +32,9 @@
           <h3>product</h3>
           <!-- div of card start from here -->
           <div id="cardDiv" class="cardDiv">
-
-
-
+            <div class="btnDiv">
+              <button onclick="getProducts()">Get Products</button>
+            </div>
             <!-- <div class="card">
               <h3 class="itemName">Hamburger</h3>
               <div class="imgDiv">
@@ -49,12 +49,27 @@
                 <summary>see more</summary>"A dessert consisting of a pastry crust filled with sliced apples, sugar, and spices</details>
             </div>
         -->
-
-
+            <div class="table">
+              <table>
+                <tr>
+                  <th class="idRow">Id</th>
+                  <th>Categories</th>
+                  <th>Name</th>
+                  <th>Price</th>
+                  <th>calories</th>
+                  <th class="des">Description</th>
+                </tr>
+                <tr>
+                  <td>01</td>
+                  <td>American</td>
+                  <td>Hamburger</td>
+                  <td>4.45</td>
+                  <td>550</td>
+                  <td>A sandwich consisting of one or more cooked patties of ground meat, usually beef, placed inside a sliced bread roll or bun</td>
+                </tr>
+              </table>
+            </div>
           </div>
-
-
-
         </div>
       </div>
     </div>
