fix fetch data problem

--- a/admin/admin.html
+++ b/admin/admin.html
@@ -74,10 +74,11 @@
 
                 <div class="categoriesDiv">
                   <p class="formCategoriesName">Categories</p>
-                  <input required list="Categories" type="text" placeholder="Select Option" id="Category" />
-                  <datalist id="Categories">
+                  <input required list="categories" type="text" placeholder="Select Option" id="category" />
+                  <datalist id="categories">
                     <option value="American">American</option>
                     <option value="italian">italian</option>
+                    
                   </datalist>
                 </div>
                 <div class="valuesDiv">
