--- a/item/item.html
+++ b/item/item.html
@@ -33,7 +33,7 @@
                     <h3 id="price">$ 4.50</h3>
                     <p id="cal" class="cal">550 Cal </p>
                 </div>
-                <button class="orderBtn" class="orderBtn">Order Now</button>
+                <button id="orderBtn" class="orderBtn">Order Now</button>
                 <p></p>
             </div>
         </div>
