--- a/product/products.html
+++ b/product/products.html
@@ -27,7 +27,7 @@
     </header>
     <main>
       <div class="itemDiv">
-        <h2 id="itemName" class="itemName">foood</h2>
+        <h2 id="category" class="itemName">food</h2>
       </div>
       <div id="cardDiv" class="cardDiv">
 
