update ui ,added forms

--- a/admin/admin.html
+++ b/admin/admin.html
@@ -29,7 +29,7 @@
         </div>
 
         <div id="product-div" class="product-div">
-          <h3>product</h3>
+          <h3>product   <span id="count" class="count">0</span></h3>
           <!-- div of card start from here -->
           <div id="cardDiv" class="cardDiv">
             <div class="btnDiv">
@@ -78,6 +78,11 @@
                   <datalist id="categories">
                     <option value="American">American</option>
                     <option value="italian">italian</option>
+                    <option value="Japan">Japan</option>
+                    <option value="Korea">Korea</option>
+                    <option value="India">India</option>
+                    <option value="Thailand">Thailand</option>
+                    <option value="Mexico">Mexico</option>
                     
                   </datalist>
                 </div>
